2016-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Check that filesize is reasonable
	given header.  Fixes excessive memory allocation followed by
	eventual file truncation error for corrupt file.  Problem was
	reported via email by Agostino Sarubbo on 2016-09-10.

	* coders/sgi.c (ReadSGIImage): Check that filesize is reasonable
	given header.  Fixes excessive memory allocation followed by
	eventual file truncation error for corrupt file.  Problem was
	reported via email by Agostino Sarubbo on 2016-09-09.

	* coders/sct.c (ReadSCTImage): Fix stack-buffer read overflow
	while reading SCT header.  Problem was reported via email by
	Agostino Sarubbo on 2016-09-09.

	* coders/svg.c: Fix Coverity issue 135772 "RESOURCE_LEAK" and
	issue 135829 "Null pointer dereferences".  None of these issues
	were new, but Coverity noticed them now.  Reflowed source to GNU C
	style for consistent indentation and so it does not fight with my
	editor.

2016-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h (MAGICK_HAS_ATTRIBUTE): Coverity is allergic to
	__has_attribute() so don't use it for Coverity builds.

2016-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update for 1.3.25 release.

	* version.sh: Update library versioning for 1.3.25 release.

	* NEWS.txt: Make sure is up to date.

	* Various fixes for minor issues noticed when compiling under
	Visual Studio.

2016-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (MAGICK_CACHE_LINE_SIZE): Apply patch from
	Gentoo Linux to increase MAGICK_CACHE_LINE_SIZE to 128 when
	__powerpc__ is defined.

2016-08-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with latest changes.

2016-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rle.c (ReadRLEImage): Reject truncated/absurd Utah RLE
	files. Problem was reported by Agostino Sarubbo on August 19,
	2016.
