@@ -1,5 +1,0 @@
-blib
-Makefile
-pm_to_blib
-Magick.c
-Magick.bs
