@@ -1,4 +1,3 @@
-build_manifest.sh
 Changelog
 demo/annotate.pl
 demo/button.pl
@@ -28,11 +27,9 @@ Makefile.am
 Makefile.nt
 Makefile.PL
 Makefile.PL.in
-MANIFEST
-PerlMagick
-PerlMagickCheck.sh
+MANIFEST			This list of files
+MANIFEST.SKIP
 PerlMagickCheck.sh.in
-perlmain.c
 README.txt
 t/blob.t
 t/bzlib/input.miff
@@ -42,8 +39,6 @@ t/bzlib/write.t
 t/cgm/input.cgm
 t/cgm/read.t
 t/composite.t
-t/crap.palm
-t/features.pl
 t/features.pl.in
 t/filter.t
 t/fpx/input_256.fpx
@@ -120,6 +115,7 @@ t/input_70x46.yuv
 t/input_888.bmp
 t/input_8888.bmp
 t/input_888flip.bmp
+t/input_complex_lsb_double_V4.mat
 t/input_gray.cin
 t/input_gray.rla
 t/input_gray.rle
@@ -174,13 +170,6 @@ t/input_rgb_lsb_08bit.mat
 t/jbig/input.jbig
 t/jbig/read.t
 t/jbig/write.t
-t/jng/gray_idat_tmp.jng
-t/jng/gray_jdaa_tmp.jng
-t/jng/gray_prog_idat_tmp.jng
-t/jng/gray_prog_jdaa_tmp.jng
-t/jng/gray_prog_tmp.jng
-t/jng/gray_tmp.jng
-t/jng/idat_tmp.jng
 t/jng/input_gray.jng
 t/jng/input_gray_idat.jng
 t/jng/input_gray_jdaa.jng
@@ -193,10 +182,6 @@ t/jng/input_prog.jng
 t/jng/input_prog_idat.jng
 t/jng/input_prog_jdaa.jng
 t/jng/input_rose.jng
-t/jng/jdaa_tmp.jng
-t/jng/prog_idat_tmp.jng
-t/jng/prog_jdaa_tmp.jng
-t/jng/prog_tmp.jng
 t/jng/read.t
 t/jng/write.t
 t/jp2/input.jp2
@@ -420,6 +405,7 @@ t/reference/wmf/clock.miff
 t/reference/wmf/fjftest.miff
 t/reference/wmf/ski.miff
 t/reference/wmf/wizard.miff
+t/reference/write/output_p7.miff
 t/setattribute.t
 t/subroutines.pl
 t/tiff/input_gray_01bit_minwhite.cals
