@@ -1,24 +1,11 @@
 .*\.gdbinit$
 .*core$
-.*\.cvsignore
-/output.*$
-/test_.+_out\..+$
-Magick\.bs$
-Magick\.c$
-Magick\.o$
 Makefile.old$
 \.bak$
-\.cvsignore$
 \.old$
-\bCVS\b
-^MANIFEST\.
-^MakeMaker-\d
 ^Makefile$
-^blib/
-^pm_to_blib$
 ~$
 \.orig$
-Makefile.aperl
-PerlMagickCheck.log
-PerlMagickCheck.trs
 \.o$
+\.bak$
+^build_manifest\.sh$
