@@ -1,1 +1,0 @@
-output* test_*_out.*
